added main menu and mechanics

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,10 +65,11 @@
             <TextView
                 android:id="@+id/txt_scoreHuman"
                 android:layout_width="50dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/defaultscore" />
+                android:gravity="bottom|center"
+                android:text="@string/defaultscore"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView8"
@@ -81,10 +82,11 @@
             <TextView
                 android:id="@+id/txt_scoreComp"
                 android:layout_width="50dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/defaultscore" />
+                android:gravity="bottom|center"
+                android:text="@string/defaultscore"
+                android:textSize="20sp" />
 
         </LinearLayout>
 
